# StateStrike

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.env  Dockerfile.honeypot  README.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements.txt  statestrike.db  telemetry.json
agent/: runner.py  telemetry.py
honeypot/: app.py  database.py
scripts/: run_demo.sh  start.sh
server/: app.py
statestrike/: .env.example  Dockerfile.honeypot  README.md  docker-compose.yml  requirements.txt
statestrike/agent/: __init__.py  rl_agent.py  runner.py  telemetry.py
statestrike/dashboard/: app.py  components.py
statestrike/honeypot/: __init__.py  app.py  middleware.py  models.py
statestrike/scripts/: setup_env.sh
statestrike/statestrike_env/: constants.py  grader.py  session.py
statestrike/tests/: test_grader.py  test_honeypot.py
statestrike_env/: README.md  __init__.py  constants.py  environment.py  grader.py  models.py  server.py  session.py  tasks.py
tests/: test_env_interface.py  test_grader.py  test_tasks.py
